Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
N/A
-
None
-
Q2/2025 Development
Description
Likely caused by MDEV-32830. Not seen before and seen more than once in current testing. Issue seems to be either highly sporadic or machine load related; not manually reproducible thus far.
|
bb-12.1-MDEV-32830_xa CS 12.0.1 4331ea8ae45a25ba29ff0412f2c9b25b12b14d2c (Debug) Build 15/05/2025 |
mariadbd: /test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_rli.cc:2558: void rpl_group_info::unmark_start_commit(): Assertion `!gco->next_gco || gco->next_gco->wait_count > e->count_committing_event_groups || allow_unmark_after_complete' failed.
|
|
bb-12.1-MDEV-32830_xa CS 12.0.1 4331ea8ae45a25ba29ff0412f2c9b25b12b14d2c (Debug) Build 15/05/2025 |
Core was generated by `/test/MDEV-32830_MD150525-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-def'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
 |
[Current thread is 1 (LWP 3905673)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x000075905fa4526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x000075905fa288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x000075905fa2881b in __assert_fail_base (fmt=0x75905fbd01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x6506bb45bc67 "!gco->next_gco || gco->next_gco->wait_count > e->count_committing_event_groups || allow_unmark_after_complete", file=file@entry=0x6506bb48640d "/test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_rli.cc", line=line@entry=2558, function=function@entry=0x6506bb4ccd5d "void rpl_group_info::unmark_start_commit()") at ./assert/assert.c:94
|
#6 0x000075905fa3b507 in __assert_fail (assertion=0x6506bb45bc67 "!gco->next_gco || gco->next_gco->wait_count > e->count_committing_event_groups || allow_unmark_after_complete", file=0x6506bb48640d "/test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_rli.cc", line=2558, function=0x6506bb4ccd5d "void rpl_group_info::unmark_start_commit()")at ./assert/assert.c:103
|
#7 0x00006506bc358cab in rpl_group_info::unmark_start_commit (this=0x758f3002c850) at /test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_rli.cc:2556
|
#8 0x00006506bbcb4fe7 in ha_rollback_trans (thd=0x758ef8000d58, all=true)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/handler.cc:2336
|
#9 0x00006506bc4dc24e in xa_trans_force_rollback (thd=0x758ef8000d58)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/xa.cc:477
|
#10 0x00006506bc4dd0c4 in slave_applier_reset_xa_trans (thd=0x758ef8000d58)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/xa.cc:1225
|
#11 0x00006506bc4dcce7 in trans_xa_prepare (thd=0x758ef8000d58)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/xa.cc:692
|
#12 0x00006506bbe443ca in XA_prepare_log_event::do_commit (this=0x758f30039958)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/log_event_server.cc:3889
|
#13 0x00006506bbe43afb in Xid_apply_log_event::do_apply_event (this=0x758f30039958, rgi=0x758f3002c850)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/log_event_server.cc:3757
|
#14 0x00006506bbe65c12 in Log_event::apply_event (this=0x758f30039958, rgi=0x758f3002c850)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/log_event.cc:3984
|
#15 0x00006506bbf51b8d in apply_event_and_update_pos_apply (ev=0x758f30039958, thd=0x758ef8000d58, rgi=0x758f3002c850, reason=0)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/slave.cc:3626
|
#16 0x00006506bbf5200f in apply_event_and_update_pos_for_parallel (ev=0x758f30039958, thd=0x758ef8000d58, rgi=0x758f3002c850)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/slave.cc:3833
|
#17 0x00006506bc44a685 in rpt_handle_event (qev=0x758f30039cd8, rpt=0x758f3000f4b0)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_parallel.cc:66
|
#18 0x00006506bc448309 in handle_rpl_parallel_thread (arg=0x758f3000f4b0)at /test/bb-12.1-MDEV-32830_xa_dbg/sql/rpl_parallel.cc:1578
|
#19 0x000075905fa9ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#20 0x000075905fb29c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Attachments
Issue Links
- is caused by
-
MDEV-32830 refactor XA binlogging for better integration with BGC/replication/recovery
-
- Stalled
-
- relates to
-
MDEV-33921 Replication fails when XA transactions are used where the slave has replicate_do_db set and the client has touched a different database when running DML such as inserts.
-
- Closed
-