MDEV-36826 read-only on slave XA-prepare thought it failed to assert

An observed assert in rpl_group_info::unmark_start_commit

 DBUG_ASSERT(!gco->next_gco ||
              gco->next_gco->wait_count > e->count_committing_event_groups ||
              allow_unmark_after_complete);

was overreaction. The reason that execution got to that point was
MDEV-33921 underfixed that issue for the slave parallel mode.

That's done now. The former test is extended to hit the assert by
the (buggy) BASE of this commit.